added security guy to game.

--- a/fb_sec_game/img/spritesheet.plist
+++ b/fb_sec_game/img/spritesheet.plist
@@ -14,9 +14,9 @@
 		<key>1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>315</integer>
 			<key>y</key>
-			<integer>1</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>31</integer>
 			<key>height</key>
@@ -33,9 +33,9 @@
 		<key>2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>584</integer>
+			<integer>376</integer>
 			<key>y</key>
-			<integer>478</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>31</integer>
 			<key>height</key>
@@ -52,9 +52,9 @@
 		<key>3.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>408</integer>
 			<key>y</key>
-			<integer>260</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>29</integer>
 			<key>height</key>
@@ -71,9 +71,9 @@
 		<key>4.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>438</integer>
 			<key>y</key>
-			<integer>285</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>29</integer>
 			<key>height</key>
@@ -90,9 +90,9 @@
 		<key>5.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>160</integer>
 			<key>y</key>
-			<integer>333</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>28</integer>
 			<key>height</key>
@@ -109,9 +109,9 @@
 		<key>6.png</key>
 		<dict>
 			<key>x</key>
-			<integer>584</integer>
+			<integer>65</integer>
 			<key>y</key>
-			<integer>416</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>32</integer>
 			<key>height</key>
@@ -128,9 +128,9 @@
 		<key>7.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>1</integer>
 			<key>y</key>
-			<integer>195</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>30</integer>
 			<key>height</key>
@@ -147,9 +147,9 @@
 		<key>8.png</key>
 		<dict>
 			<key>x</key>
-			<integer>584</integer>
+			<integer>251</integer>
 			<key>y</key>
-			<integer>449</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>32</integer>
 			<key>height</key>
@@ -166,9 +166,9 @@
 		<key>9.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>220</integer>
 			<key>y</key>
-			<integer>231</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>30</integer>
 			<key>height</key>
@@ -185,9 +185,9 @@
 		<key>10.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>189</integer>
 			<key>y</key>
-			<integer>109</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>30</integer>
 			<key>height</key>
@@ -204,9 +204,9 @@
 		<key>11.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>347</integer>
 			<key>y</key>
-			<integer>363</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>28</integer>
 			<key>height</key>
@@ -223,9 +223,9 @@
 		<key>12.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>468</integer>
 			<key>y</key>
-			<integer>310</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>29</integer>
 			<key>height</key>
@@ -242,9 +242,9 @@
 		<key>body.png</key>
 		<dict>
 			<key>x</key>
-			<integer>584</integer>
+			<integer>80</integer>
 			<key>y</key>
-			<integer>141</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>51</integer>
 			<key>height</key>
@@ -261,9 +261,9 @@
 		<key>bored1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>584</integer>
+			<integer>857</integer>
 			<key>y</key>
-			<integer>1</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>63</integer>
 			<key>height</key>
@@ -280,9 +280,9 @@
 		<key>bored2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>584</integer>
+			<integer>793</integer>
 			<key>y</key>
-			<integer>71</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>63</integer>
 			<key>height</key>
@@ -299,9 +299,9 @@
 		<key>bored3.png</key>
 		<dict>
 			<key>x</key>
-			<integer>519</integer>
+			<integer>403</integer>
 			<key>y</key>
-			<integer>214</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>64</integer>
 			<key>height</key>
@@ -318,9 +318,9 @@
 		<key>happy1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>519</integer>
+			<integer>663</integer>
 			<key>y</key>
-			<integer>71</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>64</integer>
 			<key>height</key>
@@ -337,9 +337,9 @@
 		<key>happy2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>519</integer>
+			<integer>728</integer>
 			<key>y</key>
-			<integer>428</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>64</integer>
 			<key>height</key>
@@ -356,9 +356,9 @@
 		<key>happy3.png</key>
 		<dict>
 			<key>x</key>
-			<integer>519</integer>
+			<integer>921</integer>
 			<key>y</key>
-			<integer>1</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>64</integer>
 			<key>height</key>
@@ -372,31 +372,12 @@
 			<key>originalHeight</key>
 			<integer>72</integer>
 		</dict>
-		<key>idle.png</key>
-		<dict>
-			<key>x</key>
-			<integer>584</integer>
-			<key>y</key>
-			<integer>259</integer>
-			<key>width</key>
-			<integer>34</integer>
-			<key>height</key>
-			<integer>123</integer>
-			<key>offsetX</key>
-			<real>4</real>
-			<key>offsetY</key>
-			<real>-2.5</real>
-			<key>originalWidth</key>
-			<integer>62</integer>
-			<key>originalHeight</key>
-			<integer>128</integer>
-		</dict>
 		<key>mad1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>519</integer>
+			<integer>598</integer>
 			<key>y</key>
-			<integer>357</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>64</integer>
 			<key>height</key>
@@ -413,9 +394,9 @@
 		<key>mad2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>519</integer>
+			<integer>533</integer>
 			<key>y</key>
-			<integer>286</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>64</integer>
 			<key>height</key>
@@ -432,9 +413,9 @@
 		<key>mad3.png</key>
 		<dict>
 			<key>x</key>
-			<integer>519</integer>
+			<integer>468</integer>
 			<key>y</key>
-			<integer>142</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>64</integer>
 			<key>height</key>
@@ -451,9 +432,9 @@
 		<key>walk1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>442</integer>
+			<integer>799</integer>
 			<key>y</key>
-			<integer>256</integer>
+			<integer>1</integer>
 			<key>width</key>
 			<integer>66</integer>
 			<key>height</key>
@@ -470,9 +451,9 @@
 		<key>walk2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>442</integer>
+			<integer>656</integer>
 			<key>y</key>
-			<integer>129</integer>
+			<integer>1</integer>
 			<key>width</key>
 			<integer>75</integer>
 			<key>height</key>
@@ -489,9 +470,9 @@
 		<key>walk3.png</key>
 		<dict>
 			<key>x</key>
-			<integer>1</integer>
+			<integer>228</integer>
 			<key>y</key>
-			<integer>264</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>96</integer>
 			<key>height</key>
@@ -508,9 +489,9 @@
 		<key>walk4.png</key>
 		<dict>
 			<key>x</key>
-			<integer>346</integer>
+			<integer>866</integer>
 			<key>y</key>
-			<integer>274</integer>
+			<integer>1</integer>
 			<key>width</key>
 			<integer>77</integer>
 			<key>height</key>
@@ -527,9 +508,9 @@
 		<key>walk5.png</key>
 		<dict>
 			<key>x</key>
-			<integer>442</integer>
+			<integer>732</integer>
 			<key>y</key>
-			<integer>380</integer>
+			<integer>1</integer>
 			<key>width</key>
 			<integer>66</integer>
 			<key>height</key>
@@ -546,7 +527,7 @@
 		<key>walk6.png</key>
 		<dict>
 			<key>x</key>
-			<integer>442</integer>
+			<integer>579</integer>
 			<key>y</key>
 			<integer>1</integer>
 			<key>width</key>
@@ -565,9 +546,9 @@
 		<key>walk7.png</key>
 		<dict>
 			<key>x</key>
-			<integer>1</integer>
+			<integer>132</integer>
 			<key>y</key>
-			<integer>381</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>95</integer>
 			<key>height</key>
@@ -584,9 +565,9 @@
 		<key>walk8.png</key>
 		<dict>
 			<key>x</key>
-			<integer>346</integer>
+			<integer>1</integer>
 			<key>y</key>
-			<integer>150</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>78</integer>
 			<key>height</key>
@@ -603,9 +584,9 @@
 		<key>apple.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>98</integer>
 			<key>y</key>
-			<integer>76</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>30</integer>
 			<key>height</key>
@@ -622,9 +603,9 @@
 		<key>banana.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>284</integer>
 			<key>y</key>
-			<integer>168</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>30</integer>
 			<key>height</key>
@@ -641,9 +622,9 @@
 		<key>grapes.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>986</integer>
 			<key>y</key>
-			<integer>27</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>30</integer>
 			<key>height</key>
@@ -660,9 +641,9 @@
 		<key>orange.png</key>
 		<dict>
 			<key>x</key>
-			<integer>648</integer>
+			<integer>129</integer>
 			<key>y</key>
-			<integer>138</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>30</integer>
 			<key>height</key>
@@ -679,9 +660,9 @@
 		<key>booth.png</key>
 		<dict>
 			<key>x</key>
-			<integer>346</integer>
+			<integer>325</integer>
 			<key>y</key>
-			<integer>398</integer>
+			<integer>270</integer>
 			<key>width</key>
 			<integer>77</integer>
 			<key>height</key>
@@ -698,7 +679,7 @@
 		<key>cart.png</key>
 		<dict>
 			<key>x</key>
-			<integer>346</integer>
+			<integer>483</integer>
 			<key>y</key>
 			<integer>1</integer>
 			<key>width</key>
@@ -717,9 +698,9 @@
 		<key>wheel.png</key>
 		<dict>
 			<key>x</key>
-			<integer>584</integer>
+			<integer>32</integer>
 			<key>y</key>
-			<integer>383</integer>
+			<integer>394</integer>
 			<key>width</key>
 			<integer>32</integer>
 			<key>height</key>
@@ -736,7 +717,7 @@
 		<key>bg.png</key>
 		<dict>
 			<key>x</key>
-			<integer>1</integer>
+			<integer>138</integer>
 			<key>y</key>
 			<integer>1</integer>
 			<key>width</key>
@@ -751,6 +732,44 @@
 			<integer>344</integer>
 			<key>originalHeight</key>
 			<integer>262</integer>
+		</dict>
+		<key>idle.png</key>
+		<dict>
+			<key>x</key>
+			<integer>944</integer>
+			<key>y</key>
+			<integer>1</integer>
+			<key>width</key>
+			<integer>34</integer>
+			<key>height</key>
+			<integer>123</integer>
+			<key>offsetX</key>
+			<real>0</real>
+			<key>offsetY</key>
+			<real>-2.5</real>
+			<key>originalWidth</key>
+			<integer>128</integer>
+			<key>originalHeight</key>
+			<integer>128</integer>
+		</dict>
+		<key>sec_man.png</key>
+		<dict>
+			<key>x</key>
+			<integer>1</integer>
+			<key>y</key>
+			<integer>1</integer>
+			<key>width</key>
+			<integer>136</integer>
+			<key>height</key>
+			<integer>268</integer>
+			<key>offsetX</key>
+			<real>1</real>
+			<key>offsetY</key>
+			<real>1</real>
+			<key>originalWidth</key>
+			<integer>144</integer>
+			<key>originalHeight</key>
+			<integer>274</integer>
 		</dict>
 	</dict>
 </dict>
