--- a/fb_sec_game/img/spritesheet.plist
+++ b/fb_sec_game/img/spritesheet.plist
@@ -14,7 +14,7 @@
 		<key>1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>315</integer>
+			<integer>403</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -33,7 +33,7 @@
 		<key>2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>376</integer>
+			<integer>518</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -52,7 +52,7 @@
 		<key>3.png</key>
 		<dict>
 			<key>x</key>
-			<integer>408</integer>
+			<integer>550</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -71,7 +71,7 @@
 		<key>4.png</key>
 		<dict>
 			<key>x</key>
-			<integer>438</integer>
+			<integer>580</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -90,7 +90,7 @@
 		<key>5.png</key>
 		<dict>
 			<key>x</key>
-			<integer>160</integer>
+			<integer>129</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -109,7 +109,7 @@
 		<key>6.png</key>
 		<dict>
 			<key>x</key>
-			<integer>65</integer>
+			<integer>96</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -147,7 +147,7 @@
 		<key>8.png</key>
 		<dict>
 			<key>x</key>
-			<integer>251</integer>
+			<integer>220</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -166,7 +166,7 @@
 		<key>9.png</key>
 		<dict>
 			<key>x</key>
-			<integer>220</integer>
+			<integer>253</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -204,7 +204,7 @@
 		<key>11.png</key>
 		<dict>
 			<key>x</key>
-			<integer>347</integer>
+			<integer>489</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -223,7 +223,7 @@
 		<key>12.png</key>
 		<dict>
 			<key>x</key>
-			<integer>468</integer>
+			<integer>630</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -242,7 +242,7 @@
 		<key>body.png</key>
 		<dict>
 			<key>x</key>
-			<integer>80</integer>
+			<integer>176</integer>
 			<key>y</key>
 			<integer>270</integer>
 			<key>width</key>
@@ -261,7 +261,7 @@
 		<key>bored1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>857</integer>
+			<integer>922</integer>
 			<key>y</key>
 			<integer>270</integer>
 			<key>width</key>
@@ -280,7 +280,7 @@
 		<key>bored2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>793</integer>
+			<integer>858</integer>
 			<key>y</key>
 			<integer>270</integer>
 			<key>width</key>
@@ -337,7 +337,7 @@
 		<key>happy2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>728</integer>
+			<integer>533</integer>
 			<key>y</key>
 			<integer>270</integer>
 			<key>width</key>
@@ -356,7 +356,7 @@
 		<key>happy3.png</key>
 		<dict>
 			<key>x</key>
-			<integer>921</integer>
+			<integer>793</integer>
 			<key>y</key>
 			<integer>270</integer>
 			<key>width</key>
@@ -375,7 +375,7 @@
 		<key>mad1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>598</integer>
+			<integer>728</integer>
 			<key>y</key>
 			<integer>270</integer>
 			<key>width</key>
@@ -394,7 +394,7 @@
 		<key>mad2.png</key>
 		<dict>
 			<key>x</key>
-			<integer>533</integer>
+			<integer>598</integer>
 			<key>y</key>
 			<integer>270</integer>
 			<key>width</key>
@@ -432,7 +432,7 @@
 		<key>walk1.png</key>
 		<dict>
 			<key>x</key>
-			<integer>799</integer>
+			<integer>834</integer>
 			<key>y</key>
 			<integer>1</integer>
 			<key>width</key>
@@ -489,7 +489,7 @@
 		<key>walk4.png</key>
 		<dict>
 			<key>x</key>
-			<integer>866</integer>
+			<integer>901</integer>
 			<key>y</key>
 			<integer>1</integer>
 			<key>width</key>
@@ -546,7 +546,7 @@
 		<key>walk7.png</key>
 		<dict>
 			<key>x</key>
-			<integer>132</integer>
+			<integer>80</integer>
 			<key>y</key>
 			<integer>270</integer>
 			<key>width</key>
@@ -584,7 +584,7 @@
 		<key>apple.png</key>
 		<dict>
 			<key>x</key>
-			<integer>98</integer>
+			<integer>32</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -603,7 +603,7 @@
 		<key>banana.png</key>
 		<dict>
 			<key>x</key>
-			<integer>284</integer>
+			<integer>346</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -641,7 +641,7 @@
 		<key>orange.png</key>
 		<dict>
 			<key>x</key>
-			<integer>129</integer>
+			<integer>158</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -698,7 +698,7 @@
 		<key>wheel.png</key>
 		<dict>
 			<key>x</key>
-			<integer>32</integer>
+			<integer>63</integer>
 			<key>y</key>
 			<integer>394</integer>
 			<key>width</key>
@@ -736,7 +736,7 @@
 		<key>idle.png</key>
 		<dict>
 			<key>x</key>
-			<integer>944</integer>
+			<integer>799</integer>
 			<key>y</key>
 			<integer>1</integer>
 			<key>width</key>
@@ -770,6 +770,101 @@
 			<integer>144</integer>
 			<key>originalHeight</key>
 			<integer>274</integer>
+		</dict>
+		<key>accept.png</key>
+		<dict>
+			<key>x</key>
+			<integer>284</integer>
+			<key>y</key>
+			<integer>394</integer>
+			<key>width</key>
+			<integer>61</integer>
+			<key>height</key>
+			<integer>28</integer>
+			<key>offsetX</key>
+			<real>-5.5</real>
+			<key>offsetY</key>
+			<real>0</real>
+			<key>originalWidth</key>
+			<integer>180</integer>
+			<key>originalHeight</key>
+			<integer>40</integer>
+		</dict>
+		<key>deny.png</key>
+		<dict>
+			<key>x</key>
+			<integer>435</integer>
+			<key>y</key>
+			<integer>394</integer>
+			<key>width</key>
+			<integer>53</integer>
+			<key>height</key>
+			<integer>25</integer>
+			<key>offsetX</key>
+			<real>-1.5</real>
+			<key>offsetY</key>
+			<real>1.5</real>
+			<key>originalWidth</key>
+			<integer>180</integer>
+			<key>originalHeight</key>
+			<integer>40</integer>
+		</dict>
+		<key>forward.png</key>
+		<dict>
+			<key>x</key>
+			<integer>377</integer>
+			<key>y</key>
+			<integer>394</integer>
+			<key>width</key>
+			<integer>25</integer>
+			<key>height</key>
+			<integer>25</integer>
+			<key>offsetX</key>
+			<real>-0.5</real>
+			<key>offsetY</key>
+			<real>0.5</real>
+			<key>originalWidth</key>
+			<integer>180</integer>
+			<key>originalHeight</key>
+			<integer>40</integer>
+		</dict>
+		<key>pause.png</key>
+		<dict>
+			<key>x</key>
+			<integer>660</integer>
+			<key>y</key>
+			<integer>394</integer>
+			<key>width</key>
+			<integer>16</integer>
+			<key>height</key>
+			<integer>19</integer>
+			<key>offsetX</key>
+			<real>-3</real>
+			<key>offsetY</key>
+			<real>-0.5</real>
+			<key>originalWidth</key>
+			<integer>180</integer>
+			<key>originalHeight</key>
+			<integer>40</integer>
+		</dict>
+		<key>play.png</key>
+		<dict>
+			<key>x</key>
+			<integer>610</integer>
+			<key>y</key>
+			<integer>394</integer>
+			<key>width</key>
+			<integer>19</integer>
+			<key>height</key>
+			<integer>23</integer>
+			<key>offsetX</key>
+			<real>-0.5</real>
+			<key>offsetY</key>
+			<real>-0.5</real>
+			<key>originalWidth</key>
+			<integer>180</integer>
+			<key>originalHeight</key>
+			<integer>40</integer>
 		</dict>
 	</dict>
 </dict>
